--- a/src/.vscode/launch.json
+++ b/src/.vscode/launch.json
@@ -5,12 +5,13 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "(lldb) g++ launch",
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/<your program>",
+            "program": "${fileDirname}/a.out",
             "args": [],
-            "cwd": "${workspaceFolder}"
+            "cwd": "${workspaceFolder}",
+            "preLaunchTask": "shell: g++ build active file"
         }
     ]
 }
